# range-bot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: COMPLETE_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md
docs/archive/: DATA_STRATEGY.md  SYSTEM_OVERVIEW.md  stability_alert.md
docs/archive/specs/: 001-data-layer.md  004-bayesian-engine.md  005-lp-position-manager.md  (+2 more)
docs/reference/: DEFINITIONS.md  FUNCTIONS.md
docs/specs/: 001-data-layer.md  002-vwap-prior.md  003-opus-integration.md
op_buyback/: __init__.py  aggregations.py  analysis.py  data_stubs.py  strategies.py  types.py
poc/: 01_test_rpc.py  02_test_subgraph.py  03_test_rpc_historical.py  04_vwap_bayesian_poc.py  05_real_data_analysis.py  05_real_data_analysis_sample.py  DATA_STRATEGY.md  SYSTEM_OVERVIEW.md  analyze_catastrophes.py  analyze_failures.py  analyze_momentum.py  backtest_random.py  backtest_range.py  backtest_with_alerts.py  batch_fetcher.py  compare_likelihoods.py  exploration.py  simple_poc.py  stability_alert.md  tune_thresholds.py  validate_momentum.py  viewer.html
polymarket-btc-research/: .env.example  .gitignore  ACTION_PLAN.md  API_GUIDE.md  BACKTEST_RESULTS_ANALYSIS.md  MINIMALIST_PLAN.md  QUICKSTART.md  README.md  TEST_RESULTS.md  example_usage.py  explain_model.py  research.md  test_polybacktest.py  test_suite.py  validate.py
polymarket-btc-research/src/: __init__.py  backtest_engine.py  bayesian_model.py  chainlink_fetcher.py  live_monitor.py  market_collector.py  polybacktest_client.py  polymarket_client.py  synthetic_data_generator.py
