[project]
name = "range-bot"
version = "0.1.0"
description = "Bayesian LP range optimization for Uniswap v3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0.0",
    "web3>=6.0.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]
